get sql queries in proper format from gemini

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:all": "bash src/scripts/start-all.sh"
   },
   "dependencies": {
+    "@google/genai": "^0.7.0",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.49.1",
     "next": "15.2.1",
